--- a/.github/workflows/qiita.yml
+++ b/.github/workflows/qiita.yml
@@ -11,6 +11,7 @@ jobs:
       - name: "Publish to Qiita"
         uses: noraworld/github-to-qiita@v1.0.0
         with:
+          ruby-version: '3.1.1'
           dir: "articles"
           qiita_access_token: ${{ secrets.QIITA_ACCESS_TOKEN }}
           mapping_filepath: "mapping.txt"
